UtahLiveDataTest/src/objects/R_FPRFL__c.object
<CustomObject>
    <fields>
        <fullName>DEPT_CD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DEPT_CD</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Funding Inference Profiles</relationshipLabel>
        <relationshipName>Funding_Inference_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalFINETId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>FPRFL_CD+DEPT_CD+MJR_PROG_CD</description>
        <externalId>true</externalId>
        <label>ExternalFINETId</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FPRFL_CD__c</fullName>
        <label>FPRFL_CD</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPRFL_NM__c</fullName>
        <label>FPRFL_NM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MJR_PROG_CD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MJR_PROG_CD</label>
        <referenceTo>r_mjr_prog__c</referenceTo>
        <relationshipLabel>Funding Inference Profiles</relationshipLabel>
        <relationshipName>Funding_Inference_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Funding Inference Profile</label>
    <nameField>
        <label>Funding Inference Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Inference Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>